# bluedrive-assessment-exam

./: README.md  env.example  manage.py  pyproject.toml
apps/api/: admin.py  forms.py  router.py  urls.py
apps/api/migrations/: 0001_initial.py
apps/api/models/: __init__.py  author.py  comment.py  post.py
apps/api/resources/: comment.py  post.py
apps/api/tests/: test_api.py
apps/api/views/: post.py
apps/authentication/: models.py  urls.py
apps/authentication/migrations/: 0001_initial.py
apps/core/: models.py
config/: backup.py  urls.py
config/settings/: base.py  drf.py
config/templates/: base.html
config/templates/comment/: comment_form.html
config/templates/post/: post_detail.html  post_list.html
